// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot with background scroll in state  1`] = `
<div
  className="films App"
>
  <header
    className="HEADER"
  >
    <div
      className="TITLE"
    >
      <h1>
        SWAPI BOX
      </h1>
      <p>
        a STARWARS api
      </p>
    </div>
  </header>
  <Component
    dont="stop"
  />
  <Component
    favorites={Array []}
    getData={[Function]}
  />
  <Component
    activeButton="films"
    dataType={
      Object {
        "favorites": Array [],
        "people": null,
        "planets": null,
        "vehicles": null,
      }
    }
    handlePage={[Function]}
    toggleFavorites={[Function]}
  />
</div>
`;

exports[`App should match snapshot with default states 1`] = `
<div
  className="films App"
>
  <header
    className="HEADER"
  >
    <div
      className="TITLE"
    >
      <h1>
        SWAPI BOX
      </h1>
      <p>
        a STARWARS api
      </p>
    </div>
  </header>
  <Component
    favorites={Array []}
    getData={[Function]}
  />
  <Component
    activeButton="films"
    dataType={
      Object {
        "favorites": Array [],
        "people": null,
        "planets": null,
        "vehicles": null,
      }
    }
    handlePage={[Function]}
    toggleFavorites={[Function]}
  />
</div>
`;
